--- a/index.html
+++ b/index.html
@@ -1,115 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="css/main.css">
+<hyml lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title> РЎР°Р№С‚ </title>
+    <link href = "https://fonts.google.com/share?selection.family=Rozha%20One" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+</head>
 <body>
+    <header id="header" class="header">
+        <div class="container">
+            <div class="nav">
+                <img src="img/icon.png" class="logo">
+                <ul class="menu">
+                    <li>
+                        <a href="#">Р“Р›РђР’РќРђРЇ</a>
+                    </li>
+                    <li>
+                        <a href="#">Рћ РљРћРњРџРђРќРР</a>
+                    </li>
+                    <li>
+                        <a href="#">РћРўР—Р«Р’Р«</a>
+                    </li>
+                    <li>
+                        <img src="img/tabl.png" class="tabl">
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    
+  
+    <section id="about" class="about">
+        <div class="container">
+            <div class="say">
+                <div class="art">
+                </div>
+                <div class="art1">
+                </div>
+                <div class="art2">
+                </div>
+            </div>
+            <div class="obl1">
+            </div> 
+            <div class="h3">
+                <div class="pul">
+                    <div class="pu1">
+                         <img src="img/stat1.png" class="pic">
+                        <img src="img/stat2.png" class="pic">
+                        <img src="img/stat3.png" class="pic">
+                    </div>
+                    <div class="pu1">
+                        <img src="img/stat4.png" class="pic">
+                        <img src="img/stat5.png" class="pic">
+                        <img src="img/stat6.png" class="pic">
+                    </div>
+                    <div class="pu1">
+                        <img src="img/stat7.png" class="pic">
+                        <img src="img/stat8.png" class="pic">
+                        <img src="img/stat9.png" class="pic">
+                    </div>
+                </div>
+                <m> <p>РќРµРјРЅРѕРіРѕ Рѕ РЅР°СЃ<p></m>
+                <m1>    РњС‹ РїСЂРµРґР»Р°РіР°РµРј РїСЂРѕРґСѓРєС†РёСЋ РєР°Рє РёР·РІРµСЃС‚РЅС‹С…, С‚Р°Рє Рё РЅР°С‡РёРЅР°СЋС‰РёС… РїРёСЃР°С‚РµР»РµР№. Р’ РЅР°С€РµРј РјР°РіР°Р·РёРЅРµ РІС‹ СЃРјРѕР¶РµС‚Рµ РїСЂРёРѕР±СЂРµСЃС‚Рё РєРЅРёРіРё РїРѕ РІС‹РіРѕРґРЅС‹Рј С†РµРЅР°Рј, Р° РґР»СЏ РїРѕСЃС‚РѕСЏРЅРЅС‹С… РєР»РёРµРЅС‚РѕРІ РґРµР№СЃС‚РІСѓРµС‚ СЃРёСЃС‚РµРјР° СЃРєРёРґРѕРє. РњС‹ РѕСЃСѓС‰РµСЃС‚РІР»СЏРµРј РґРѕСЃС‚Р°РІРєСѓ Р·Р°РєР°Р·РѕРІ РїРѕ РІСЃРµР№ СЃС‚СЂР°РЅРµ. РўР°РєР¶Рµ РІРѕР·РјРѕР¶РµРЅ СЃР°РјРѕРІС‹РІРѕР· РёР· РјР°РіР°Р·РёРЅР°. РќР°С€Рё РєРѕРЅСЃСѓР»СЊС‚Р°РЅС‚С‹ РІСЃРµРіРґР° РіРѕС‚РѕРІС‹ РїРѕРјРѕС‡СЊ РІР°Рј СЃ РІС‹Р±РѕСЂРѕРј РєРЅРёРі Рё РѕС‚РІРµС‚РёС‚СЊ РЅР° Р»СЋР±С‹Рµ РІРѕРїСЂРѕСЃС‹. РќР° СЃР°Р№С‚Рµ РІС‹ РјРѕР¶РµС‚Рµ РѕСЃС‚Р°РІРёС‚СЊ РѕС‚Р·С‹РІ Рѕ РїСЂРёРѕР±СЂРµС‚РµРЅРЅРѕР№ РїСЂРѕРґСѓРєС†РёРё РёР»Рё РЅР°РїРёСЃР°С‚СЊ РїРѕР¶РµР»Р°РЅРёРµ Р°РІС‚РѕСЂР°Рј.Рµ</m1>
+
+            </div>
+            <div class="obl2">
+            </div>
+
+        </div>
+    </section>
+    <footer id="footer" class="footer">
+        <div class="container">
+            <div class="na">
+                <img src="img/tw.png" class="tww">
+            </div>
+            <div class="na">
+                <img src="img/tww.png" class="tww">
+            </div>
+        </div>
+    </footer>
     <div>
-        <p>Задание 1</p>
-        <h2>Задание 2</h2>
-    </div>
-
-    <div id="test">
-        <p>Задание 3</p>
-        <h2>Задание 4</h2>
-    </div>
-
-    <span class="bbb">Задание 5</span>
-
-    <div id="test">
-        <div class="bbb">Задание 6</div>
-    </div>
-    <p class="bbb">Задание 7</p>
-    <h2 class="bbb">Задание 8</h2>
-    <div id="test">
-        <p class="bbb">Задание 9</p>
-    </div>
-    <div>
-        <h2>Задание 10</h2>
-        <p>Задание 10</p>
-    </div>
-    <span class="bbb">Задание 11</span>
-    <span class="xxx">Задание 11</span>
-
-    <p class="bbb">Задание 12</p>
-    <h2 class="xxx">Задание 12</h2>
-
-    <div id="test">
-        <p class="bbb">Задание 13</p>
-        <p class="xxx">Задание 13</p>
-    </div>
-
-    <div class="fff">
-        <span>Задание 14</span>
-        <p>Задание 15</p>
-    </div>
-
-    <p class="fff">Задание 16</p>
-
-    <p class="fff">
-        <span class="bbb">Задание 17</span>
-    </p>
-
-    <div class="fff">
-        <h2 class="bbb">Задание 18</h2>
-    </div>
-
-    <div id="test">
-        <a href="">Задание 19 </a>
-    </div>
-
-    <div class="www">
-        <a href="">Задание 20</a>
-    </div>
-
-    <div id="test">
-        <a class="www" href="">Задание 21</a>
-    </div>
-
-    <div class="eee">
-        <a class="www" href="">Задание 22</a>
-    </div>
-
-    <p>
-        <i>Задание 23</i>
-    </p>
-
-    <ul>
-        <li>Задание 24</li>
-    </ul>
-
-    <p>
-        <a href="">Задание 25</a>
-    </p>
-
-    <a class="test" href="">Задание 25</a>
-
-    <b>текст</b>
-    <i>Задание 26</i>
-
-    <div id="test">
-        <b>
-            текст/b>
-            <i>Задание 27</i>
-    </div>
-
-    <ul>текст</ul>
-    <p>Задание 28</p>
-
-    <h1>текст</h1>
-    <p>Задание 29</p>
-    <div><p>текст</p></div>
-    <p>Задание 29</p>
-
-    <article id="test">
-        <h2>текст</h2>
-        <p>Задание 30</p>
-    </article>
-
-
-    <p>
-        <span>
-            <i>Задание 31</i>
-        </span>
-    </p>
-
-</body>
-</html>
+        
